# django-swagger

./: README.md  pyproject.toml
core/: settings.py  urls.py
