[tool.poetry]
name = "django-swagger"
version = "0.1.0"
description = ""
authors = ["Bruno Fioreze"]
readme = "README.md"
packages = [{include = "django_swagger"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
drf-yasg = "^1.21.4"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
